[package]
name = "pq_keys_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
pqcrypto-dilithium = "0.5"  # check latest version
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
cipher = "0.4"
rand = "0.8.5"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.2.0"
